[gd_scene load_steps=2 format=3 uid="uid://dxnqo7j3r8ryk"]

[ext_resource type="Script" path="res://Scripts/UI/dialogue_ui.gd" id="1_dialogue_ui"]

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource("1_dialogue_ui")

[node name="DialoguePanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="NPCLabel" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Barback"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResponseLabel" type="RichTextLabel" parent="DialoguePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "What can I get you?"
fit_content = false
scroll_active = true
autowrap_mode = 3

[node name="PlayerInput" type="LineEdit" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Type your message here..."
caret_blink = true

[node name="CloseButton" type="Button" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Close (ESC)"
